# bot

./: .gitignore  Application.hs  README.md  app.json  bot.cabal  circle.yml  stack.yaml
.halcyon/: constraints  sandbox-extra-apps
.halcyon/sandbox-extra-apps-constraints/: hlint-1.9.18.constraints  yesod-bin-1.4.5.1.constraints
Handler/: Home.hs
app/: devel.hs
config/: keter.yml  test-settings.yml
sbin/: build-heroku.sh  build-local.sh  setup.sh  update-dependencies.sh
spec/: DocTest.hs  HLint.hs  Haddock.hs  Spec.hs
src/: Bot.hs
src/Bot/: Github.hs  Internal.hs
test/Handler/: HomeSpec.hs
