name:                 bot
version:              0.0.0
synopsis:             A build bot
homepage:             https://github.com/dkubb/bot
license:              MIT
author:               Dan Kubb
maintainer:           dkubb@fastmail.com
copyright:            2015 Dan Kubb
category:             Testing
build-type:           Simple
cabal-version:        >= 1.18

source-repository head
    type:             git
    location:         git@github.com:dkubb/bot.git

flag documentation
  default: False

library
    ghc-options:        -Wall
                        -Werror
                        -fwarn-incomplete-record-updates
                        -fwarn-tabs
                        -fwarn-monomorphism-restriction
                        -fwarn-unused-do-bind
                        -fwarn-implicit-prelude
    default-language:   Haskell2010
    default-extensions: NoImplicitPrelude,
                        OverloadedStrings,
                        FlexibleContexts,
                        ImpredicativeTypes
    exposed-modules:    Bot, Bot.Github, Bot.Internal
    hs-source-dirs:     src
    build-depends:      airship >= 0.3 && < 1,
                        base >= 4 && < 5,
                        bytestring,
                        http-media,
                        http-types >= 0.7,
                        mtl,
                        securemem,
                        SHA,
                        text,
                        transformers >= 0.3 && < 1,
                        void >= 0.7

  if flag(documentation)
    build-depends: hscolour >= 1.22

executable bot
    ghc-options:        -Wall
                        -Werror
                        -fwarn-incomplete-record-updates
                        -fwarn-tabs
                        -fwarn-monomorphism-restriction
                        -fwarn-unused-do-bind
                        -fwarn-implicit-prelude
    default-language:   Haskell2010
    default-extensions: NoImplicitPrelude,
                        OverloadedStrings
    main-is:            Main.hs
    hs-source-dirs:     bin
    build-depends:      airship >= 0.3 && < 1,
                        base >= 4 && < 5,
                        bot,
                        void >= 0.7,
                        wai == 3.0.2.*,
                        warp == 3.0.*

test-suite hspec
    ghc-options:        -Wall
                        -Werror
                        -fwarn-incomplete-record-updates
                        -fwarn-tabs
                        -fwarn-monomorphism-restriction
                        -fwarn-unused-do-bind
                        -fwarn-implicit-prelude
    default-language:   Haskell2010
    default-extensions: NoImplicitPrelude
    main-is:            Spec.hs
    hs-source-dirs:     spec src
    type:               exitcode-stdio-1.0
    build-depends:      base,
                        bot,
                        hspec >= 2.1

test-suite hlint
    ghc-options:        -Wall
                        -Werror
                        -fwarn-incomplete-record-updates
                        -fwarn-tabs
                        -fwarn-monomorphism-restriction
                        -fwarn-unused-do-bind
                        -fwarn-implicit-prelude
    default-language:   Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs:     spec
    main-is:            HLint.hs
    type:               exitcode-stdio-1.0
    build-depends:      base,
                        Glob,
                        hlint >= 1.9

test-suite doctest
    ghc-options:        -Wall
                        -Werror
                        -fwarn-incomplete-record-updates
                        -fwarn-tabs
                        -fwarn-monomorphism-restriction
                        -fwarn-unused-do-bind
                        -fwarn-implicit-prelude
    default-language:   Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs:     spec
    main-is:            DocTest.hs
    type:               exitcode-stdio-1.0
    build-depends:      base,
                        Glob,
                        doctest >= 0.9

test-suite haddock
    ghc-options:        -Wall
                        -Werror
                        -fwarn-incomplete-record-updates
                        -fwarn-tabs
                        -fwarn-monomorphism-restriction
                        -fwarn-unused-do-bind
                        -fwarn-implicit-prelude
    default-language:   Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs:     spec
    main-is:            Haddock.hs
    type:               exitcode-stdio-1.0
    build-depends:      base,
                        process >= 1.2,
                        regex-compat >= 0.95
